# synth-xtal

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_ENHANCEMENTS.md  PUBLISHING.md  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
SECURITY/: index.html
api/: index.html
docs/: SECURITY.md  api.md  future_improvements.md  index.md  science.md  validation.md
docs/tutorials/: 01_crystallography_basics.ipynb  02_experimental_validation.ipynb  end_to_end_validation.ipynb  hiv1_rt_hinge_motion.ipynb  hydration_shell_analysis.ipynb  idp_vs_folded.ipynb  interactive_sandbox.ipynb  saxs_profile_generation.ipynb  synth_suite_bridge.ipynb
examples/interactive_tutorials/: 03_virtual_crystallography_lab.ipynb
future_improvements/: index.html
science/: index.html
search/: search_index.json
synth_xtal/: cli.py  simulator.py
synth_xtal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_experimental_validation.py  test_simulator.py
tutorials/: 01_crystallography_basics.ipynb  02_experimental_validation.ipynb
validation/: index.html
